--- a/styles/ProjectCard.module.scss
+++ b/styles/ProjectCard.module.scss
@@ -4,45 +4,52 @@
   width: 100%;
   height: auto;
   border-radius: 10px;
-  padding: 1.5rem;
   gap: 1.5rem;
   box-shadow: 0px 0px 10px 5px rgb(0 0 0 / 20%);
 
-  .projectImg {
-    height: 5rem;
-    margin: 1rem;
+  .imageContainer {
+    position: relative;
+    height: 9rem;
+
+    .projectImg {
+    }
   }
 
-  .cardBody {
+  .cardText {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    justify-content: space-between;
+    gap: 1.5rem;
+    padding: 0 1.5rem 1.5rem;
+
     .cardTitle {
     }
   }
-  .buttons {
-    display: flex;
+}
+.buttons {
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+  margin: auto auto 0;
+  padding: 0 0 1.5rem;
+  gap: 1rem;
+
+  .buttonPrimary {
+    cursor: pointer;
+    background-color: darkslategrey;
+    color: white;
+    border-radius: 0.75rem;
+    padding: 0.5rem 0.75rem;
+
+    &:hover {
+      box-shadow: 0px 0px 10px 5px rgb(0 0 0 / 20%);
+      background-color: lightcyan;
+      color: darkslategrey;
+    }
+  }
+
+  @media screen and (min-width: 480px) {
     flex-direction: row;
-    width: fit-content;
-    margin: auto auto 0;
-    gap: 1rem;
-    .buttonPrimary {
-      cursor: pointer;
-      background-color: darkslategrey;
-      color: white;
-      border-radius: 0.75rem;
-      padding: 0.5rem 0.75rem;
-
-      &:hover {
-        box-shadow: 0px 0px 10px 5px rgb(0 0 0 / 20%);
-        background-color: lightcyan;
-        color: darkslategrey;
-      }
-    }
-
-    @media screen and (min-width: 480px) {
-      flex-direction: row;
-    }
   }
 }
 
